Changes for headings

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -107,6 +107,7 @@
 <script>
     $('[data-toggle="tooltip"]').tooltip();
     hljs.initHighlightingOnLoad();
+    new ClipboardJS('.clipboard');
 </script>
 <script src="web/js/custom.js"></script>
 <script>
