--- a/raml2html/themes/default/resource-response-content.html.twig
+++ b/raml2html/themes/default/resource-response-content.html.twig
@@ -1,11 +1,10 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}_response">
     {% for response in method.responses %}
         {% if response.headers or response.bodies %}
-            <h6 class="heading text-gray background--gray-light d-inline-block">Responses</h6>
+            <h6 class="heading text-gray border-bottom pb-2">Responses</h6>
             <div id="{{ resource_unique_id }}_{{ method.type }}_response_{{ response.statusCode }}">
                 {% if response.headers %}
                     <ul class="collection with-header">
-                        <li class="collection-header"><h5>Headers</h5></li>
                         <li class="collection-item">
                             <ul class="browser-default">
                                 {% for item in response.headers %}
@@ -17,7 +16,6 @@
                 {% endif %}
                 {% if response.bodies %}
                     <div class="pb-3">
-                        <p class="mb-0 font-weight-medium">Body</p>
                         <p><code>Code: {{ response.statusCode }}</code></p>
                         {% for b in response.bodies %}
                             {% if b.examples %}
@@ -26,9 +24,9 @@
                                     <div class="example position-relative border p-3 mb-3">
                                         <p class="mb-0 font-weight-medium">{{ mediaType }}</p>
                                         <p class="mb-0 icon icon--copy-clipboard">
-                                            <i class="material-icons-outlined" data-toggle="tooltip" data-placement="top" title="Copy to clipboard">file_copy</i>
+                                            <i class="material-icons-outlined clipboard" data-toggle="tooltip" data-placement="top" data-clipboard-target="#foo" title="Copy to clipboard">file_copy</i>
                                         </p>
-                                        <pre class="border-top"><code class="{{ mediaType }}">{{ example }}</code></pre>
+                                        <pre id="" class="border-top"><code class="{{ mediaType }}">{{ example }}</code></pre>
                                     </div>
                                 {% endfor %}
                             {% endif %}
