--- a/raml2html/themes/default/resource-request-content.html.twig
+++ b/raml2html/themes/default/resource-request-content.html.twig
@@ -1,8 +1,7 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}_request" {{ method.bodies ? 'class="mb-4"' : '' }}>
     {% if method.bodies %}
-        <h6 class="heading text-gray background--gray-light d-inline-block">Request</h6>
+        <h6 class="heading text-gray border-bottom pb-2">Request</h6>
         {% for key, body in method.bodies %}
-            <p class="font-weight-medium">Body</p>
             <div class="table-responsive mb-3">
                 <table class="table highlight striped">
                     <tbody>
