--- a/raml2html/themes/default/resource-securedby-content.html.twig
+++ b/raml2html/themes/default/resource-securedby-content.html.twig
@@ -1,8 +1,8 @@
-<div id="{{ resource_unique_id }}_{{ method.type }}_securedby">
+<div id="{{ method.type }}_securedby">
     <ul class="tabs response">
         {% for securityScheme in method.securitySchemes %}
             <li class="tab">
-                <a href="#{{ resource_unique_id }}_{{ method.type }}_securedby_{{ securityScheme.key }}">
+                <a href="#{{ method.type }}_securedby_{{ securityScheme.key }}">
                     {{ securityScheme.key }}
                 </a>
             </li>
@@ -10,7 +10,7 @@
     </ul>
 
     {% for securityScheme in method.securitySchemes %}
-    <div id="{{ resource_unique_id }}_{{ method.type }}_securedby_{{ securityScheme.key }}">
+    <div id="{{ method.type }}_securedby_{{ securityScheme.key }}">
         {% if securityScheme.description %}
             <ul class="collection with-header">
                 <li class="collection-header"><h5>Description</h5></li>
@@ -66,7 +66,7 @@
                 <ul class="tabs">
                     {% for response in securityScheme.describedBy.responses %}
                         <li class="tab">
-                            <a href="#{{ resource_unique_id }}_{{ method.type }}_securedby_response_{{ response.statusCode }}">
+                            <a href="#{{ method.type }}_securedby_response_{{ response.statusCode }}">
                                 {{ response.statusCode }}
                             </a>
                         </li>
@@ -74,7 +74,7 @@
                 </ul>
 
                 {% for response in securityScheme.describedBy.responses %}
-                    <div id="{{ resource_unique_id }}_{{ method.type }}_securedby_response_{{ response.statusCode }}">
+                    <div id="{{ method.type }}_securedby_response_{{ response.statusCode }}">
                         <p>{{ response.description }}</p>
 
                         {% if response.headers %}
