--- a/web/css/style.css
+++ b/web/css/style.css
@@ -71,6 +71,23 @@ body {
 .input--search {
     padding-left: 30px;
 }
+#search-results {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100000;
+    background-color: #f9f9fa;
+    height: 100%;
+    overflow-y: scroll;
+}
+.search__link {
+    color: #212529;
+}
+.search__link:hover {
+    text-decoration: none;
+    background-color: #f9f9fa;
+    opacity: 1;
+}
 .sidebar__nav {
     overflow-y: scroll;
     height: 100%;
@@ -91,9 +108,6 @@ body {
     color: #2b2b2b;
     font-size: 15px;
     display: block;
-}
-.menu-list-item--has-sub-items .menu-list {
-    /*display: none;*/
 }
 .sidebar-menu a:hover {
     color: #f15a22;
@@ -222,7 +236,7 @@ code {
     background-color: #032f62;
 }
 .section {
-    padding-top: 3rem;
+    /*padding-top: 3rem;*/
 }
 .example {
     border-radius: 10px;
@@ -234,4 +248,7 @@ code {
 .hljs-section,
 .hljs-name {
     color: #0086b3;
+}
+.highlight {
+    background-color: #ededed;
 }
