--- a/raml2html/themes/default/resource-request-content.html.twig
+++ b/raml2html/themes/default/resource-request-content.html.twig
@@ -3,7 +3,7 @@
         <h6 class="heading text-gray border-bottom pb-2">Request</h6>
         {% for key, body in method.bodies %}
             <div class="table-responsive mb-3">
-                <table class="table highlight striped">
+                <table class="table striped">
                     <tbody>
                     <tr>
                         <th>Media type</th>
