--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
     <link href="web/css/bootstrap.min.css" rel="stylesheet">
+    <link href="web/css/bootstrap-toc.min.css" rel="stylesheet">
     <link href="web/fonts/MavenPro.css" rel="stylesheet">
     <link href="web/css/github-gist.css" rel="stylesheet">
     <link href="web/css/style.css" rel="stylesheet">
     <title>{{ api.title }}</title>
 </head>
-<body>
+<body data-spy="scroll" data-target="#toc">
 <header class="header fixed-top background--gray">
     <div class="container-fluid">
         <div class="row">
@@ -39,42 +40,19 @@
             <div class="sidebar-menu pl-0 col-lg-2">
                 <div class="container text-left px-0">
                     <div class="sidebar__header">
-                        <div class="d-flex justify-content-center mt-3">
+                        <div class="d-flex justify-content-center mt-4">
                             <i class="material-icons icon--search">search</i>
                             <input type="text" id="search-input" class="input--search w-100 rounded-sm border-top-0 border-left-0 border-right-0" placeholder="Search">
                         </div>
                     </div>
-                    <nav class="sidebar__nav navbar navigation">
-                        <ul class="list-item menu-list list-unstyled test-left mt-2">
-                            {% if api.types is not empty %}
-                                <li class="py-2 menu-list-item menu-list-item--has-sub-items">
-                                    <a href="#types">Types</a>
-                                    <ul class="list-unstyled menu-list pl-3 d-none">
-                                        {% for type in api.types %}
-                                            <li class="py-2">
-                                                <a href="">{{ type.name }}</a>
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
-                                </li>
-                            {% endif %}
-                            {% for resource in api.resources %}
-                                <li class="py-2 menu-list-item menu-list-item--has-sub-items">
-                                    <a href="#{{ resource.displayName|replace({' ': '-'})|lower }}">{{ resource.displayName|default(resource.uri) }}</a>
-                                    <ul class="list-unstyled menu-list pl-3">
-                                        {% include theme ~ "/sidebar-menu.html.twig" %}
-                                    </ul>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </nav>
+                    <nav id="toc" data-spy="affix" data-toggle="toc" class="sidebar__nav navbar navigation"></nav>
                 </div>
             </div>
             <div id="search-results" class="py-5 px-3 d-none col-lg-10"></div>
             <div class="page-wrapper col-lg-10">
                 <div class="container-fluid">
                     {% for resource in api.resources %}
-                        <section class="section search-container">
+                        <section class="section">
                             {% set rootParentName = resource.displayName|default(resource.uri) %}
                             <h2 id="{{ resource.displayName|replace({' ': '-'})|lower }}" class="heading pt-5 pb-2 text-orange" data-field="name">
                                 {{ rootParentName }}
@@ -83,7 +61,7 @@
                         </section>
                     {% endfor %}
                     {% if api.types is not empty %}
-                        <section class="section search-container">
+                        <section class="section">
                             <h2 id="types" class="heading pb-2 pt-5 text-orange" data-field="name">Types</h2>
                             <ul class="list-unstyled">
                                 {% for type in api.types %}
@@ -109,6 +87,7 @@
 <script src="web/js/clipboard.min.js"></script>
 <script src="web/js/lunr.js"></script>
 <script src="web/js/search.js"></script>
+<script src="web/js/bootstrap-toc.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
 <script>
     $('.dropdown-toggle').dropdown();
