--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -1,6 +1,6 @@
 {% set methodNameId = method.displayName|replace({' ': '-'})|lower %}
-<div id="{{ methodNameId }}-section" class="page-section" data-parent="{{ rootParentName }}">
-    <div class="row px-3 border-top pr-lg-0">
+<div id="{{ methodNameId }}-section" class="search-container" data-parent="{{ rootParentName }}">
+    <div class="row px-3 pr-lg-0">
         <div class="col-12">
             <h5 id="{{ methodNameId }}" class="heading text-gray font-weight-medium pt-5" data-field="name">
                 {{ method.displayName }}
