--- a/raml2html/themes/default/sidebar-menu.html.twig
+++ b/raml2html/themes/default/sidebar-menu.html.twig
@@ -1,7 +1,13 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     {% for method in resource.methods %}
         <li class="py-2">
-            <a href="#{{ method.displayName|replace({' ': '-'})|lower }}" class="navigation__link">
+            <a href="#{{ method.displayName|replace({
+                ' ': '-',
+                '(': '',
+                ')': '',
+                '/': '',
+                '\'': ''
+            })|lower }}" class="menu-list-item__link">
                 {{ method.displayName }}
             </a>
         </li>
