--- a/web/css/style.css
+++ b/web/css/style.css
@@ -91,13 +91,6 @@ body {
     background-color: #f9f9fa;
     opacity: 1;
 }
-.sidebar__nav {
-    overflow-y: scroll;
-    height: 100%;
-    position: absolute;
-    top: 43px;
-    padding-bottom: 80px;
-}
 .sidebar-menu {
     position: fixed;
     left: 0;
@@ -107,17 +100,45 @@ body {
     margin-top: 3rem;
     padding-bottom: 3rem;
 }
-.sidebar-menu a {
+.sidebar__nav {
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 43px;
+    left: 0;
+    padding-bottom: 80px;
+    align-items: start;
+}
+.sidebar__nav .nav .nav {
+    padding-left: 1rem;
+}
+.sidebar__nav .nav > li > .nav-link,
+.sidebar__nav .nav .nav > li > .nav-link {
+    padding: .5rem 0;
     color: #2b2b2b;
     font-size: 15px;
     display: block;
 }
-.sidebar-menu a:hover {
+.sidebar__nav .nav > li > .nav-link.active,
+.sidebar__nav .nav .nav > li > .nav-link.active {
     color: #f15a22;
-    text-decoration: none;
+    border-left: none;
+    padding-left: 0;
 }
-.sidebar-menu a.active {
+.sidebar__nav .nav > li > .nav-link:hover,
+.sidebar__nav .nav .nav > li > .nav-link:hover,
+.sidebar__nav .nav > li > .nav-link:focus,
+.sidebar__nav .nav .nav > li > .nav-link:focus {
+    padding-left: 0;
+    border-left: none;
     color: #f15a22;
+}
+.sidebar__nav .nav .nav > li > .nav-link.active:hover {
+    padding-left: 0;
+}
+.menu-list-item__link.current {
+    color: darkred;
 }
 .page-wrapper {
     margin-left: 16.666667%;
@@ -254,4 +275,23 @@ code {
 }
 .highlight {
     background-color: #ededed;
+}
+
+.sticky--active {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 1000000000;
+}
+
+.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    /*the following is how far from the top of the screen you want your element to stick if you change it to 20px it will start to stick 20px from the top of the screen*/
+    top: 15px;
+    heigth: 100%;
+}
+.sticky-container {
+    /*height: 2000px;*/
 }
