--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -4,6 +4,7 @@
         <div class="col-12">
             <h5 id="{{ methodNameId }}" class="heading text-gray font-weight-medium pt-5" data-field="name">
                 {{ method.displayName }}
+                <a href="#{{ methodNameId }}" class="heading__link">¶</a>
             </h5>
         </div>
         <div class="col-lg-6">
