Add TOC css style

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
     <link href="web/css/bootstrap.min.css" rel="stylesheet">
+    <link href="web/css/bootstrap-toc.min.css" rel="stylesheet">
     <link href="web/fonts/MavenPro.css" rel="stylesheet">
     <link href="web/css/github-gist.css" rel="stylesheet">
     <link href="web/css/style.css" rel="stylesheet">
