--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -7,7 +7,7 @@
                 data-field="name"
                 data-search="{{ methodNameId }}">
                 {{ method.displayName }}
-                <a href="#{{ methodNameId }}" class="heading__link">¶</a>
+                <a href="#{{ rootElemId ~ '-' ~ methodNameId }}" class="heading__link">¶</a>
             </h5>
         </div>
         <div class="col-lg-6">
