--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,9 +1,8 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     {% set sectionId = resource.displayName|replace({' ': '-'})|lower %}
-    <div class="sticky-container">
-    <div class="border-bottom border-top pt-3 sticky">
+    <div class="border-bottom border-top pt-3 pb-4 sticky">
         <h4 id="{{ sectionId }}" class="heading text-gray mr-4">{{ resource.uri }}</h4>
-        <ul class="list-unstyled d-inline-flex">
+        <ul class="list-unstyled d-inline-flex mb-0">
             {% for method in resource.methods %}
                 <li class="{{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
                     <a href="#{{ rootElemId ~ '-' ~ method.displayName|replace({' ': '-'})|lower }}">
@@ -19,7 +18,6 @@
         {% include theme ~ "/resource.html.twig" %}
     {% endfor %}
 {% endif %}
-    </div>
 {% for resource in resource.resources %}
     {% include theme ~ "/resource-endpoints.html.twig" %}
 {% endfor %}
