Changes for sticky bars with endpoint methods

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,3 +304,9 @@ code {
     content: '';
     display: table;
 }
+h5[data-field="name"]:before {
+    display: block;
+    margin-top: -5.9rem;
+    padding-top: 6.9rem;
+    content: "";
+}
