--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -3,7 +3,7 @@
     <div class="row px-3 pr-lg-0">
         <div class="col-12">
             <h5 id="{{ rootElemId ~ '-' ~ methodNameId }}"
-                class="heading text-gray font-weight-medium pt-5"
+                class="heading text-gray font-weight-medium"
                 data-field="name"
                 data-search="{{ methodNameId }}">
                 {{ method.displayName }}
