--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,18 +1,20 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     {% set sectionId = resource.displayName|replace({' ': '-'})|lower %}
-    <div class="border-bottom border-top pt-3 pb-4 sticky">
-        <h4 id="{{ sectionId }}" class="heading text-gray mr-4">{{ resource.uri }}</h4>
-        <ul class="list-unstyled d-inline-flex mb-0">
-            {% for method in resource.methods %}
-                <li class="{{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
-                    <a href="#{{ rootElemId ~ '-' ~ method.displayName|replace({' ': '-'})|lower }}">
+    <div class="sticky px-3">
+        <div class="border-bottom border-top py-3 pb-4">
+            <h4 id="{{ sectionId }}" class="heading text-gray mr-4">{{ resource.uri }}</h4>
+            <ul class="list-unstyled d-inline-flex mb-0">
+                {% for method in resource.methods %}
+                    <li class="{{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
+                        <a href="#{{ rootElemId ~ '-' ~ method.displayName|replace({' ': '-'})|lower }}">
                            <span class="pl-0 new badge badge--{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
                                 {{ method.type }}
                            </span>
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
     {% for method in resource.methods %}
         {% include theme ~ "/resource.html.twig" %}
