--- a/raml2html/themes/default/resource-group.html.twig
+++ b/raml2html/themes/default/resource-group.html.twig
@@ -1,6 +1,8 @@
 {% if resource.resources|length > 1 %}
     {% for resource in resource.resources %}
-        <h3 class="heading text-gray py-5 border-top">{{ resource.uri }}</h3>
+        <div class="px-3">
+            <h3 class="heading text-gray py-5 border-top">{{ resource.uri }}</h3>
+        </div>
         {% include theme ~ "/resource-endpoints.html.twig" %}
     {% endfor %}
 {% else %}
